--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-body {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, input{
     font-family: 'Poppins', sans-serif;
+}
+
+body {
     background: rgba(66, 211, 255, 0.31);
 }
 
@@ -33,6 +42,8 @@ header h1 {
     font-size: 36px;
     line-height: 42px;
     color: white;
+
+    margin-bottom: 24px;
 }
 
 header p{
@@ -45,6 +56,55 @@ form{
     border-radius: 8px;
     margin-top: 38px;
     background: #FAFAFC;
-
     min-height: 300px;
+    padding: 64px;
+}
+
+fieldset{
+    border: none;
+}
+
+fieldset legend{
+    font-family: 'Archivo', 'san-serif';
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 34px;
+
+    width: 100%;
+    border-bottom: 1px solid #E6E6F0;
+    padding-bottom: 16px;
+}
+
+.input-wrapper{
+    display: flex;
+    flex-direction: column;
+
+    margin-top: 24px;
+}
+
+.input-wrapper label{
+    color: #4E4958;
+    font-size: 14px;
+    line-height: 24px;
+
+    margin-bottom: 8px;
+}
+
+.input-wrapper label span{
+    margin-left: 12px;
+
+    color: #C1BCCC;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.input-wrapper input{
+    background:#FAFAFC;
+    width: 608px;
+    height: 56px;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+    padding: 0 24px;
+    font-size: 12px;
+    line-height: 26px;
 }
