--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root{
+  font-size: 62.5%; /* 10px */
+}
+
+
 body,
 input {
   font-family: "Poppins", sans-serif;
@@ -18,7 +23,7 @@ body {
 body::before {
   content: "";
   width: 100%;
-  height: 368px;
+  height: 36.8rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -27,39 +32,40 @@ body::before {
 }
 
 .page {
-  width: 736px;
+  max-width: 73.6rem;
+  width: 90vw;
   margin: auto;
 }
 
 header {
-  width: 319px;
-  margin-top: 74px;
+  width: 90vw;
+  margin-top: 7.4rem;
 }
 
 header h1 {
   font-family: "Archivo", sans-serif;
   font-weight: bold;
 
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 3.6rem;
+  line-height: 4.2rem;
   color: white;
 
-  margin-bottom: 24px;
+  margin-bottom: 2.4rem;
 }
 
 header p {
   color: #42d3ff;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
 }
 
 /* FORM */
 #wrapper {
-  border-radius: 8px;
-  margin-top: 38px;
+  border-radius: 0.8rem;
+  margin-top: 3.8rem;
   background: #fafafc;
-  min-height: 300px;
-  padding: 64px;
+  min-height: 30.0rem;
+  padding: 6.4rem;
 }
 
 fieldset {
@@ -69,52 +75,53 @@ fieldset {
 fieldset legend {
   font-family: "Archivo", "san-serif";
   font-weight: 600;
-  font-size: 24px;
-  line-height: 34px;
+  font-size: 2.4rem;
+  line-height: 3.4rem;
 
   width: 100%;
   border-bottom: 1px solid #e6e6f0;
-  padding-bottom: 16px;
+  padding-bottom: 1.6rem;
 }
 
 .input-wrapper {
   display: flex;
   flex-direction: column;
 
-  margin-top: 24px;
+  width: 100%;
+
+  margin-top: 2.4rem;
 }
 
 .input-wrapper label {
   color: #4e4958;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
 
-  margin-bottom: 8px;
+  margin-bottom: 0.8rem;
 }
 
 .input-wrapper label span {
-  margin-left: 12px;
+  margin-left: 1.2rem;
 
   color: #6c6a71;
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 1.2rem;
+  line-height: 2.0rem;
 }
 
 .input-wrapper input,
 .input-wrapper select {
   background: #fafafc;
-  width: 608px;
-  height: 56px;
+  height: 5.6rem;
   border: 1px solid #e6e6f0;
-  border-radius: 8px;
-  padding: 0 24px;
-  font-size: 12px;
-  line-height: 26px;
+  border-radius: 0.8rem;
+  padding: 0 2.4rem;
+  font-size: 1.2rem;
+  line-height: 2.6rem;
 }
 
 #infos-extras {
-  height: 168px;
-  padding: 12px;
+  height: 16.8rem;
+  padding: 1.2rem;
 }
 
 .input-wrapper select {
@@ -123,31 +130,32 @@ fieldset legend {
 
 /* CAMPO PRIVACIDADE */
 fieldset#privacy {
-  margin-top: 48px;
+  margin-top: 4.8rem;
 }
 
 .input-privacy {
-  margin-top: 24px;
+  margin-top: 2.4rem;
 }
 
 /* CAMPO DATA */
 fieldset#date {
-  margin-top: 48px;
+  margin-top: 4.8rem;
 }
 
 div#date {
-  margin-top: 24px;
+  margin-top: 2.4rem;
   display: flex;
-  gap: 20px;
+  flex-wrap: wrap;
+  gap: 2.0rem;
 }
 
 #input-date {
   background: #fafafc;
   border: 1px solid #e6e6f0;
-  border-radius: 8px;
-  padding: 0 24px;
-  font-size: 12px;
-  line-height: 26px;
+  border-radius: 0.8rem;
+  padding: 0 2.4rem;
+  font-size: 1.2rem;
+  line-height: 2.6rem;
 }
 
 .input-date {
@@ -156,18 +164,18 @@ div#date {
 }
 
 .input-date input {
-  width: 312px;
-  height: 56px;
-  border-radius: 8px;
+  width: 100%;
+  height: 5.6rem;
+  border-radius: 0.8rem;
   border: 1px solid #e6e6f0;
   background: #fafafc;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 #initial-hour,
 #final-hour {
-  width: 128px;
+  width: 100%;
 }
 
 input[type="date"]::-webkit-inner-spin-button,
@@ -178,10 +186,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 /* CAMPO BOTÃO */
 #down {
-  height: 136px;
+  height: 13.6rem;
   border-radius: 0px 0px 8px 8px;
   background: #f0f0f4;
-  padding: 40px 64px;
+  padding: 4.0rem 6.4rem;
 }
 
 button#save {
@@ -194,10 +202,10 @@ button#save {
 
   color: #fff;
   font-family: Archivo;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-style: normal;
   font-weight: 600;
-  line-height: 26px;
+  line-height: 2.6rem;
 }
 
 button#save:hover{
@@ -207,4 +215,16 @@ button#save:hover{
 /* VALIDAÇÂO */
 input:invalid{
   border: 1px solid #FF1010;
+}
+
+@media (max-width:280px) {
+  header h1{
+    font-size: 2.9rem;
+  }
+  #wrapper{
+    padding: 2rem;
+  }
+  :root{
+    font-size: 52.5%; /* 10px */
+  }
 }
